fixes alignment of list filters with todo list

--- a/src/components/buttons/todoListFilter/todoListFilter.module.scss
+++ b/src/components/buttons/todoListFilter/todoListFilter.module.scss
@@ -6,7 +6,7 @@
 	padding: 4px 4px 4px 16px;
 	color: white;
 
-	margin: 0 15px 0 0;
+	margin: 0 7px 0 0;
 
 	p {
 		margin: 0;
